--- a/mon-app/src/App.css
+++ b/mon-app/src/App.css
@@ -3,6 +3,8 @@
   --second-background: rgb(21,21,21);
   --white: rgb(208, 208, 209);
   --black: black;
+  --grey: rgb(36, 36, 37);
+  --cream:rgb(250, 250, 232);
 }
 
 .App {
@@ -11,20 +13,18 @@
 }
 
 body{
-  background-color: var(--background);
+  background-color: var(--cream);
   width: auto;
   text-align: center;
-
 }
-.itemsContainer{
-  top: 0;
-
+.title{
+  margin-top: 2em;
 }
 .navList {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 10em;
+  margin-top: 2em;
   
   ul {
       display: flex;
@@ -52,7 +52,7 @@ body{
   }
 }
 .btn-content{
-  margin-top: 8em;;
+  margin-top: 3em;;
   display: flex;
   justify-content: center;
   gap:2em;
@@ -81,9 +81,9 @@ body{
   color: var(--white);
 }
 span{
-  background: linear-gradient(to right, #6cff52,#3ec5ff);
+  /* background: linear-gradient(to right, #6cff52,#3ec5ff); */
   /* background: linear-gradient(90deg, #0700b8 0%, #00ff88 100%); */
-  /* background: linear-gradient(90deg, #00ff88 0%, #0700b8  50%, #00ff88 100%); */
+  background: linear-gradient(90deg, #00ff88 0%, #0700b8  50%, #00ff88 100%);
 
   background-clip: text;
   color: transparent;
@@ -92,3 +92,43 @@ span{
   color: var(--white);
   text-decoration: none;
 }
+label{
+  color: var(--white);
+}
+#checkbox-id{
+  width: 3em;
+  border-radius: 2em;
+  border: 1em solide var(--grey);
+
+}
+
+.liste-content{
+  margin-left: 5em;
+  margin-top: 5em;
+}
+.styled-table {
+  color: var(--white);
+  margin: 20px 10;
+  font-size: 1.2em;
+  padding: 1 1;
+  font-family: sans-serif;
+  width: auto;
+  /* background-color: var(--grey); */
+  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
+  width: 90%;
+}
+
+
+.styled-table th, .styled-table td {
+  border: 0.1em solid var(--grey);  
+  padding: 8px;  
+  text-align: left;  
+  color: rgb(98, 98, 99);
+}
+
+.styled-table th {
+  background-color: #7d7e7f;  /* Optional: Change the header background */
+  color: var(--white);
+
+}
+
